--- a/server.conf
+++ b/server.conf
@@ -4,5 +4,8 @@ server {
 
     location / {
         root /go/;
+
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
     }
 }
