--- a/server.conf
+++ b/server.conf
@@ -5,6 +5,14 @@ server {
     location / {
         root /go/;
 
+        if ($request_method = OPTIONS ) {
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Methods "GET, OPTIONS";
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 200;
+        }
+
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
     }
